--- a/hw/pro-3/pro3.html
+++ b/hw/pro-3/pro3.html
@@ -65,7 +65,7 @@
     <div id="all">
         <div class="card">
             <div>
-                <img src="img/p1.jpg" alt="card" style="width: 100%;">
+                <img src="img/p11.jpg" alt="card" style="width: 100%; height: 275px;">
             </div>
             <div class="text">
                 <p class="b1">Offer</p>
@@ -75,7 +75,7 @@
 
         <div class="card">
             <div>
-                <img src="img/p2.jpg" alt="card" style="width: 100%; height: 100%;">
+                <img src="img/p2.jpg" alt="card" style="width: 100%;">
             </div>
             <div class="text">
                 <p class="b1">Offer</p>
