--- a/Website/website.html
+++ b/Website/website.html
@@ -19,7 +19,7 @@
             font-weight: bold;
             text-decoration: none;
             padding: 20px;
-            display: block;
+            display: inline-block;
         }
         #menu li a:hover {
             background-color: aqua;
