--- a/Website/website.html
+++ b/Website/website.html
@@ -4,27 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="header.css">
     <style> 
         * {
             margin: 0;
         }
-        #menu {
-            list-style-type: none;
-        }
-        #menu li {
-            float: left;
-            text-align: center;
-        }
-        #menu li a {
-            font-weight: bold;
-            text-decoration: none;
-            padding: 20px;
-            display: inline-block;
-        }
-        #menu li a:hover {
-            background-color: aqua;
-            color: brown;
-        }
+
     </style>
 </head>
 <body>
