--- a/position.html
+++ b/position.html
@@ -14,7 +14,7 @@
             border: 5px solid rgb(87, 51, 5);
             background-color:rgba(103, 146, 226, 0.274);
             position: relative;
-            width: 95%%;
+            width: 95%;
             height: 400px;
         }
         .absolute {
