--- a/Website-2/Website.html
+++ b/Website-2/Website.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="logo">
             <a href="#"><img src="img/logo.png" alt=""></a>
         </div>
-        <div class="menu">
+        <div class="navbar">
             <a href="#">Home</a>
-            <div class="s-menu">Products
-                <div class="dd-menu"> 
-                <a href="#">Shirts</a>
-                <a href="#">Pants</a>
-                <a href="#">Others</a>
-                </div>
-                </div>
-                <a href="#">Product</a>
-                <a href="#">Service</a>
-                <a href="#">Help</a>
-                <a href="#">Contact Us</a>
+            <div class="dropdown">
+                <a href="#">Products</a>
+                    <div class="dropdown-content">
+                        <a href="#">Shirts</a>
+                        <a href="#">Pants</a>
+                        <a href="#">Others</a>
+                    </div>
+            </div>
+            <a href="#">Service</a>
+            <a href="#">Help</a>
+            <a href="#">Contact Us</a>
         </div>
-        <div class="sbar">
+        <div class="searchbar">
             <input type="text">
             <a href="#" title="Search on Google"><button>Search</button></a>
         </div>
     </div>
 </body>
+
 </html>
