--- a/Website-2/Website.html
+++ b/Website-2/Website.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <div class="container">
         <div class="logo">
             <a href="#"><img src="img/logo.png" alt=""></a>
@@ -25,13 +26,33 @@
             </div>
             <a href="#">Service</a>
             <a href="#">Help</a>
-            <a href="#">Contact Us</a>
+            <a href="https://github.com/assad-uz" target="_blank">Contact Us</a>
         </div>
         <div class="searchbar">
             <input type="text">
             <a href="#" title="Search on Google"><button>Search</button></a>
         </div>
     </div>
+    
+        <div class="sidebar">
+            <div class="sidebar-menu">
+            <a href="#">Home</a> <br> <br>
+            <a href="#">Search Book</a> <br> <br>
+            <a href="#">Upload Book</a> <br> <br>
+            <a href="#">The News</a> <br> <br>
+            <a href="#">User Registration</a> <br> <br>
+        </div>
+        </div>
+        <div class="right-content"> 
+            <div class="banner">
+                <img src="img/banner.jpg" alt="">
+            </div>
+            <div class="bottom-banner">
+                <div class="l">Left</div>
+                <div class="r">Right</div>
+            </div>
+        </div>
+    <div class="footer">Footer</div>
 </body>
 
 </html>
